@@ -1,3 +1,8 @@
+ags (1.4.22)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed concurrent access during animation
+
 ags (1.4.21)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
